<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoundLights</string>

    <string name="action_settings">Settings</string>
    <string name="action_play">Play</string>
    <string name="action_microphone">Microphone</string>
    <string name="action_dropbox">Dropbox</string>
    <string name="txtFilesHeader">Current Files</string>

    <string name="lblRecordingFeedback">...</string>
    <string name="lblIPReceivers">Select Receivers</string>
    <string name="lblIPText">Please enter an IP address here</string>
    <string name="btnSend">Send</string>
    <string name="lblColorOptions">Select a color pattern</string>
    <string name="rbtnOne">All Blue</string>
    <string name="rbtnTwo">Alternating Lights</string>
    <string name="rbtnThree">All Green</string>
    <string name="chkIP">IP Address</string>
    <string name="chkUVA">UVA</string>
    <string name="txtInputIP">172.26.166.135</string>
    <string name="upload">Upload the Recorded File</string>
    <string name="stop">Stop</string>
    <string name="display">Display List of Files</string>
    <string name="save">Save As: (default-values.wav)</string>

</resources>
