<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_microphone"
        android:icon="@drawable/ic_action_mic"
        android:title="@string/action_microphone"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_play"
        android:icon="@drawable/play1"
        android:title="@string/action_play"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        app:showAsAction="collapseActionView|ifRoom" />

</menu>

